# cpp-base-project-vcpkg

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform-build-and-test.yml
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  dummy.test.cpp
